Fix java 17 code smells